# akela-host-com

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  BUILD_PLAN.md  DECISIONS.md  PRD.md  PROGRESS.md  terms-of-service.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  theme.css
frontend/src/components/: Layout.tsx  bits.tsx
frontend/src/lib/: api.ts  auth.tsx  theme.ts
frontend/src/pages/: Admin.tsx  AgentDetail.tsx  Dashboard.tsx  Landing.tsx  RentAgent.tsx
infra/: docker-compose.dev.yml
infra/test-agent/: Dockerfile  server.py
infra/traefik/: traefik.yml
infra/traefik/dynamic/: .gitkeep
scripts/: deploy-agent.sh  recycle-agent.sh  wipe-data.sh
src/backend/: __init__.py  config.py  dependencies.py  main.py  ratelimit.py  security.py
src/backend/db/: __init__.py  base.py  fleet_models.py  models.py  session.py
src/backend/migrations/: env.py  script.py.mako
src/backend/providers/: __init__.py  auth_mock.py  auth_supabase.py  base.py  billing_fake.py  billing_stripe.py  compose.py  email_console.py  email_resend.py  email_templates.py  factory.py  fleet_local.py  fleet_supabase.py  provisioner_local.py  provisioner_ssh.py
src/backend/routers/: admin.py  agents.py  auth.py  billing.py  fleet.py  referrals.py  routing.py  webhooks.py
src/backend/schemas/: agents.py  auth.py  billing.py  referrals.py
src/backend/scripts/: seed.py
src/backend/services/: __init__.py  agent_pool.py  billing.py  (+7 more)
(+28 files in other folders)
